test/trivial/bradc/entrypoint/twomains.good
error: Ambiguous main() function:
twomains.chpl:4: note: in module twomains
twomains.chpl:11: note: in module twomains
