test/trivial/bradc/entrypoint/twomains.chpl
var x = 32;
var y = -1;

proc main() {
  var y = 42;

  writeln("x is: ", x);
  writeln("y is: ", y);  
}

proc main() {
  writeln("Should never get here");
}
